replaced picture banner and colors, tried to correct alignment

--- a/code/style.css
+++ b/code/style.css
@@ -18,7 +18,7 @@ p {
 /*header*/
 
 .hero {
-    background-image: url("./assets/Simple\ Technology\ LinkedIn\ Banner\ \(6\).png");
+    background-image: url("./assets/ichio-nmQxtSHSgnQ-unsplash.jpg");
     background-size: cover;
     padding: 0 24px;
     display: flex;
@@ -149,13 +149,15 @@ section {
     display: inline-block;
     width: 50px;
     height: 2px;
-    background-color: #F4036F;
+    background-color: 
+    #fe351d;
     margin-bottom: 6px;
 }
 
 .summary-red-dot {
     display: inline-block;
-    background-color:#F4036F;
+    background-color:
+    #fe351d;
     width:15px;
     height: 15px;
     border-radius: 50%;
@@ -169,7 +171,8 @@ h2 {
     font-size: 22px;
     line-height: 27px;
     text-align: center;
-    background-color: #F4036F;
+    background-color: 
+    #fe351d;
     color: white;
     padding: 0 8px;
     margin: 0 0 32px;
@@ -179,7 +182,8 @@ h3 {
     font-size: 21px;
     line-height: 25px;
     text-align: center;
-    color: #F4036F;
+    color: 
+    #fe351d;
     margin: 40px 0;
 }
 .tech-section {
@@ -257,7 +261,8 @@ h4 {
     font-size: 10px;
     line-height: 11px;
     letter-spacing: 0.01em;
-    background-color: #F4036F;
+    background-color: 
+    #fe351d;
     padding: 5px;
     color: white;
 }
@@ -335,6 +340,14 @@ a {
     display: none;
 }
 
+h6 {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 29px;
+    color: #fe351d;
+    margin: 0;
+}
+
 ul {
     font-size: 17px;
     line-height: 29px;
@@ -342,6 +355,8 @@ ul {
     padding: 0;
     margin: 0;
 }
+
+/*social icons*/
 
 .social-icons-links {
     display: flex;
@@ -351,7 +366,8 @@ ul {
 .icons-bottom-circle {
     width: 60px;
     height: 60px;
-    border: 2px solid  #F4036F;
+    border: 2px solid
+    #fe351d;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -376,12 +392,15 @@ ul {
     font-size: 11px;
     line-height: 13px;
     text-align: center;
-    color:  #F4036F;
+    color:  
+    #fe351d;
 }
 
 .footer {
-    background-color: #F7D9D9;
-    color: white;
-    text-align: center;
-    padding: 60px 24px 84px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
 }
+
+
